# Discord.py-Framework

./: main.py  pyproject.toml
cogs/: help.py  listeners.py  utility.py
utils/: fauna.py  functions.py  pagination.py  resources.py  storage.py
videos/: w_video.avi
