[tool.poetry]
name = "pythonframeworkproper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
tinydb = "^4.5.1"
discord-ext-check = "^0.1"
discord-ext-menus = "^1.1"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
